--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,7 @@
       "name": "Python: Current File",
       "type": "python",
       "request": "launch",
+      "cwd": "${workspaceFolder}",
       "program": "main.py",
       "console": "integratedTerminal",
       "justMyCode": true
